--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,20 @@
 </head>
 
 <body>
+    <div class="preloader">
+        <div class="svg-animation-load">
+            <div class="arrows">
+                <svg>
+                    <polygon class="fil0" points="5.1 0 36.26 0.01 22 14.26 21.86 5.11 0 5.1 0 5.1 5.1 0" />
+                    <polygon class="fil1"
+                        points="31.16 14.26 0 14.26 14.26 0 14.4 9.15 36.26 9.16 36.26 9.16 31.16 14.26" />
+                </svg>
+            </div>
+            <div class="company-name">
+                <p> Калининградский аудит</p>
+            </div>
+        </div>
+    </div>
     <header>
         <div class="header-box">
             <div class="logo-box">
