--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
                 <p> Калининградский аудит</p>
             </div>
         </div>
+        <p class="load-info">Подождите, идёт загрузка</p>
     </div>
     <header>
         <div class="header-box">
