--- a/public/index.html
+++ b/public/index.html
@@ -169,11 +169,11 @@
             <h2>Контакты</h2>
             <div class="columns">
                 <div class="column1">
-                    <a class="contacts__logo-icon" href=""><img src="img/icons/icon-logo.png" alt="" width="32px"> Калининградский Аудит</a>
-                    <a class="contacts__adress-icon" href=""><img src="img/icons/icon-map.png" alt="" width="32px"> Калининград, ул.Генделя 5</a>
-                    <a class="contacts__phone-icon" href=""><img src="img/icons/icon-phone.png" alt="" width="32px"> 8-906-237-72-67</a>
-                    <a class="contacts__mail-icon" href=""><img src="img/icons/icon-mail.png" alt="" width="32px"> audit39@bk.ru</a>
-                    <a class="contacts__mail-icon" href=""><img src="img/icons/icon-mail.png" alt="" width="32px"> volkov@audit39.ru</a>
+                    <a class="contacts__logo-icon" href=""><img src="img/icons/icon-logo.png" alt="" width="32px"> <p>Калининградский Аудит</p></a>
+                    <a class="contacts__adress-icon" href=""><img src="img/icons/icon-map.png" alt="" width="32px"> <p>Калининград, ул.Генделя 5</p></a>
+                    <a class="contacts__phone-icon" href=""><img src="img/icons/icon-phone.png" alt="" width="32px"> <p>8-906-237-72-67</p></a>
+                    <a class="contacts__mail-icon" href=""><img src="img/icons/icon-mail.png" alt="" width="32px"> <p>audit39@bk.ru</p></a>
+                    <a class="contacts__mail-icon" href=""><img src="img/icons/icon-mail.png" alt="" width="32px"> <p>volkov@audit39.ru</p></a>
                 </div>
                 <div class="column2">
                     <div class="maps">
@@ -191,7 +191,7 @@
                 <p>© Калининградский Аудит 1995-2020</p>
             </div>
             <div class="design">
-                <p>Дизайн - </p>
+                <p>Дизайн -</p>
                 <img src="img/icons/logo-design.png" alt="" height="20px">
             </div>
         </div>
