add hover effect

--- a/public/index.html
+++ b/public/index.html
@@ -43,11 +43,11 @@
         </div>
 
         <nav>
-            <a href="">О компании</a>
-            <a href="">Услуги</a>
-            <a href="">Консультация</a>
-            <a href="">Нам доверяют</a>
-            <a href="">Контакты</a>
+            <a href="#company-info">О компании</a>
+            <a href="#service">Услуги</a>
+            <a href="#consultation">Консультация</a>
+            <a href="#partners">Нам доверяют</a>
+            <a href="#contacts">Контакты</a>
         </nav>
     </header>
     <main>
@@ -61,10 +61,10 @@
                 </div>
             </div>
         </section>
-        <section class="company-info">
+        <section id="company-info">
             <div class="column1">
                 <h2>О Компании</h2>
-                <div><a>Директор</a></div>
+                <div><a href="#director">Директор</a></div>
                 <div><a>Правовая информация</a></div>
                 <div><a>Сертификаты</a></div>
             </div>
@@ -72,7 +72,7 @@
                 <p>ООО аудиторская компания "Калининградский Аудит" образована 7 декабря 1995 года. Мы предоставляем широкий спектр услуг в области аудита, бухгалтерского учета и налогообложения, правового, налогового, финансового и инвестиционного консльтирования, стратегического планирования и аркетинговых исследований, применения МСФО.<br> ООО "Калининградский аудит" является членом Некоммерческого партнерства "Российская Коллегия Аудиторов" (свидетельство №0115-ю), являющегося ассоциированным членом Международной Федерации Бухгалтеров (IFAC).</p>
             </div>
         </section>
-        <section class="company-features">
+        <section id="company-features">
             <div class="company-features-filter">
                 <div class="feature">
                     <img src="img/icons/icon1.png" alt="">
@@ -88,7 +88,7 @@
                 </div>
             </div>
         </section>
-        <section class="director">
+        <section id="director">
             <div class="column1">
                 <p>Волков Владимир Анатольевич</br> Генеральный директор.</p>
             </div>
@@ -98,7 +98,7 @@
                 </div>
             </div>
         </section>
-        <section class="service">
+        <section id="service">
             <h2>Услуги</h2>
             <div class="services">
                 <div class="service-item1">
@@ -124,7 +124,7 @@
                 <a href="">Получить БЕСПЛАТНУЮ консультацию</a>
             </div>
         </section>
-        <section class="partners">
+        <section id="partners">
             <div class="partners-title">
                 <h2>Нам доверяют</h2>
             </div>
@@ -140,7 +140,7 @@
                 <div class="btn right"></div>
             </div>
         </section>
-        <section class="consultation">
+        <section id="consultation">
             <h2>Я хочу заказать БЕСПЛАТНУЮ консультацию</h2>
             <p>Оставьте заявку и Вам ответят по эдектронной почте или перезвонят в ближайшее время</p>
             <form action="">
@@ -165,7 +165,7 @@
 
             </form>
         </section>
-        <section class="contacts">
+        <section id="contacts">
             <h2>Контакты</h2>
             <div class="columns">
                 <div class="column1">
