--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Аудит в Калининграде | ООО "Калининградский Аудит"</title>
-    <meta name="description" content="Аудиторские услуги в Калининграде. Широкий спектр услуг в области аудита, бухгалтерского учета и налогообложения. Огромный опыт работы с 1995 года.">
+    <meta name="description"
+        content="Аудиторские услуги в Калининграде. Широкий спектр услуг в области аудита, бухгалтерского учета и налогообложения. Огромный опыт работы с 1995 года.">
     <meta name="keywords">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
@@ -29,7 +30,7 @@
     <header>
         <div class="header-box">
             <div class="logo-box">
-                <div class="logo-arows">
+                <div class="logo-arrows">
                     <img src="img/logo.png" alt="">
                 </div>
                 <div class="logo-title">
@@ -57,7 +58,10 @@
                     <h1>Аудиторские услуги<br> в Калининграде</h1>
                 </div>
                 <div class="column2">
-                    <p>Вам необходимо получить аудиторское заключение бухгалтерской отчётности для сдачи в налоговую, для размещения на сайте Федресурса, для предоставления в банк или для иной цели?<br> В таком случае у нас вы сможете получить аудиторское заключение баухгалтерской отчётности в кратчайшие сроки по самым низким ценам.</p>
+                    <p>Вам необходимо получить аудиторское заключение бухгалтерской отчётности для сдачи в налоговую,
+                        для размещения на сайте Федресурса, для предоставления в банк или для иной цели?<br> В таком
+                        случае у нас вы сможете получить аудиторское заключение баухгалтерской отчётности в кратчайшие
+                        сроки по самым низким ценам.</p>
                 </div>
             </div>
         </section>
@@ -69,7 +73,12 @@
                 <div><a>Сертификаты</a></div>
             </div>
             <div class="column2">
-                <p>ООО аудиторская компания "Калининградский Аудит" образована 7 декабря 1995 года. Мы предоставляем широкий спектр услуг в области аудита, бухгалтерского учета и налогообложения, правового, налогового, финансового и инвестиционного консльтирования, стратегического планирования и аркетинговых исследований, применения МСФО.<br> ООО "Калининградский аудит" является членом Некоммерческого партнерства "Российская Коллегия Аудиторов" (свидетельство №0115-ю), являющегося ассоциированным членом Международной Федерации Бухгалтеров (IFAC).</p>
+                <p>ООО аудиторская компания "Калининградский Аудит" образована 7 декабря 1995 года. Мы предоставляем
+                    широкий спектр услуг в области аудита, бухгалтерского учета и налогообложения, правового,
+                    налогового, финансового и инвестиционного консльтирования, стратегического планирования и
+                    аркетинговых исследований, применения МСФО.<br> ООО "Калининградский аудит" является членом
+                    Некоммерческого партнерства "Российская Коллегия Аудиторов" (свидетельство №0115-ю), являющегося
+                    ассоциированным членом Международной Федерации Бухгалтеров (IFAC).</p>
             </div>
         </section>
         <section id="company-features">
@@ -80,7 +89,8 @@
                 </div>
                 <div class="feature">
                     <img src="img/icons/icon2.png" alt="">
-                    <p>Мы работаем с предприятиями<br> всех организационно-правовых форм<br> и всех видов деятельности</p>
+                    <p>Мы работаем с предприятиями<br> всех организационно-правовых форм<br> и всех видов деятельности
+                    </p>
                 </div>
                 <div class="feature">
                     <img src="img/icons/icon3.png" alt="">
@@ -107,7 +117,8 @@
                         <p class="coast">Стоимость от 10 000 руб.</p>
                     </div>
                     <div class="service__order">
-                        <a href="">Заказать услугу<div class="service__order__img-box"><img src="img/icons/arrow-green.png" alt="" height="65px"></div></a>
+                        <a href="">Заказать услугу<div class="service__order__img-box"><img
+                                    src="img/icons/arrow-green.png" alt="" height="65px"></div></a>
                     </div>
                 </div>
                 <div class="service-item2">
@@ -116,13 +127,14 @@
                         <p class="coast">Стоимость от 10 000 руб.</p>
                     </div>
                     <div class="service__order">
-                        <a href="">Заказать услугу <div class="service__order__img-box"><img src="img/icons/arrow-red.png" alt="" height="65px"></div></a>
+                        <a href="">Заказать услугу <div class="service__order__img-box"><img
+                                    src="img/icons/arrow-red.png" alt="" height="65px"></div></a>
                     </div>
                 </div>
             </div>
-            <div class="service-consult">
-                <a href="">Получить БЕСПЛАТНУЮ консультацию</a>
-            </div>
+
+            <a class="service-consult" href="">Получить БЕСПЛАТНУЮ консультацию</a>
+
         </section>
         <section id="partners">
             <div class="partners-title">
@@ -169,15 +181,26 @@
             <h2>Контакты</h2>
             <div class="columns">
                 <div class="column1">
-                    <a class="contacts__logo-icon" href=""><img src="img/icons/icon-logo.png" alt="" width="32px"> <p>Калининградский Аудит</p></a>
-                    <a class="contacts__adress-icon" href=""><img src="img/icons/icon-map.png" alt="" width="32px"> <p>Калининград, ул.Генделя 5</p></a>
-                    <a class="contacts__phone-icon" href=""><img src="img/icons/icon-phone.png" alt="" width="32px"> <p>8-906-237-72-67</p></a>
-                    <a class="contacts__mail-icon" href=""><img src="img/icons/icon-mail.png" alt="" width="32px"> <p>audit39@bk.ru</p></a>
-                    <a class="contacts__mail-icon" href=""><img src="img/icons/icon-mail.png" alt="" width="32px"> <p>volkov@audit39.ru</p></a>
+                    <a class="contacts__logo-icon" href=""><img src="img/icons/icon-logo.png" alt="" width="32px">
+                        <p>Калининградский Аудит</p>
+                    </a>
+                    <a class="contacts__adress-icon" href=""><img src="img/icons/icon-map.png" alt="" width="32px">
+                        <p>Калининград, ул.Генделя 5</p>
+                    </a>
+                    <a class="contacts__phone-icon" href=""><img src="img/icons/icon-phone.png" alt="" width="32px">
+                        <p>8-906-237-72-67</p>
+                    </a>
+                    <a class="contacts__mail-icon" href=""><img src="img/icons/icon-mail.png" alt="" width="32px">
+                        <p>audit39@bk.ru</p>
+                    </a>
+                    <a class="contacts__mail-icon" href=""><img src="img/icons/icon-mail.png" alt="" width="32px">
+                        <p>volkov@audit39.ru</p>
+                    </a>
                 </div>
                 <div class="column2">
                     <div class="maps">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d576.0767244030787!2d20.49583189739729!3d54.7218163877054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e33dff72b3da15%3A0x6f717953300872f9!2z0JrQsNC70LjQvdC40L3Qs9GA0LDQtNGB0LrQuNC5INCQ0YPQtNC40YI!5e0!3m2!1sru!2sru!4v1579606856941!5m2!1sru!2sru">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d576.0767244030787!2d20.49583189739729!3d54.7218163877054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e33dff72b3da15%3A0x6f717953300872f9!2z0JrQsNC70LjQvdC40L3Qs9GA0LDQtNGB0LrQuNC5INCQ0YPQtNC40YI!5e0!3m2!1sru!2sru!4v1579606856941!5m2!1sru!2sru">
                         </iframe>
                     </div>
                 </div>
