add script menu

--- a/public/index.html
+++ b/public/index.html
@@ -44,11 +44,14 @@
         </div>
 
         <nav>
-            <a href="#company-info">О компании</a>
-            <a href="#service">Услуги</a>
-            <a href="#consultation">Консультация</a>
-            <a href="#partners">Нам доверяют</a>
-            <a href="#contacts">Контакты</a>
+            <a class="menu-item" href="#company-info">О компании</a>
+            <a class="menu-item" href="#service">Услуги</a>
+            <a class="menu-item" href="#consultation">Консультация</a>
+            <a class="menu-item" href="#partners">Нам доверяют</a>
+            <a class="menu-item" href="#contacts">Контакты</a>
+            <div class="menu-icon">
+                <img src="img/icons/menu.png">
+            </div>
         </nav>
     </header>
     <main>
@@ -221,6 +224,7 @@
 
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/preloader.js"></script>
     <script src="js/main.js"></script>
 </body>
 
