--- a/public/index.html
+++ b/public/index.html
@@ -125,7 +125,7 @@
                 <p>Волков Владимир Анатольевич</br> Генеральный директор.</p>
             </div>
             <div class="column2">
-                <div class="photo">
+                <div class="director-photo">
                     <img src="" alt="Фото">
                 </div>
             </div>
@@ -162,16 +162,11 @@
             <div class="partners-title">
                 <h2>Нам доверяют</h2>
             </div>
-            <div class="partners-photos">
-                <!--Заглушка кнопки-->
-                <div class="btn left"></div>
-                <div class="photo">фото</div>
-                <div class="photo">фото</div>
-                <div class="photo">фото</div>
-                <div class="photo">фото</div>
-                <div class="photo">фото</div>
-                <!--Заглушка кнопки-->
-                <div class="btn right"></div>
+            <div class="slider">
+                <img class="arrow-left" src="./img/icons/arrow-left.png" width="50px" height="50px">
+                <div class="partners-photos">
+                </div>
+                <img class="arrow-right" src="./img/icons/arrow-right.png" width="50px" height="50px">
             </div>
         </section>
         <section id="consultation">
